Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignTextBooleanWrapped.quorum
class main
    action Main
        text t = true
    end
end